Add new missed blocks metrics

--- a/tools/monitoring-and-alerting/cosmos-sdk-missed-block-monitor/stargazer_exporter.service
+++ b/tools/monitoring-and-alerting/cosmos-sdk-missed-block-monitor/stargazer_exporter.service
@@ -9,6 +9,8 @@ Group=prometheus
 Type=simple
 ExecStart=/usr/local/bin/stargazer_exporter \
   --block-address=<change to your hash address> 
+Restart=on-failure
+RestartSec=20s
 
 [Install]
 WantedBy=multi-user.target
