Add messaging to monitoring

--- a/tools/monitoring-and-alerting/cosmos-sdk-missed-block-monitor/stargazer_exporter.service
+++ b/tools/monitoring-and-alerting/cosmos-sdk-missed-block-monitor/stargazer_exporter.service
@@ -8,7 +8,10 @@ User=prometheus
 Group=prometheus
 Type=simple
 ExecStart=/usr/local/bin/stargazer_exporter \
-  --block-address=<change to your hash address> 
+  --block-address=<change to your hash address> \
+  --chat-id <chat id of the Telegram group> \
+  --bot-token <Telegram bot token>
+
 Restart=on-failure
 RestartSec=20s
 
